Edited the search form interface view and search form logic viewpoint because I changed my design

--- a/design_doc.tex
+++ b/design_doc.tex
@@ -75,14 +75,7 @@ The next section covers database management, from how it is organized and create
 Next is a section on the search form, which also covers the user interface design and how the search forms are displayed.
 Lastly, report generation is covered, detaling the design of the user view and how the report will be displayed.
 
-\section{References}
 
-\begin{thebibliography}{2}
-
-\bibitem {Lau} Lau, Dmitri. "10 Reasons Why You Should Use AngularJS." \em{sitepoint}. N.p., 5 Sept. 2013. Web. 26 Nov. 2016.
-\bibitem{Rav} C, Ravindra T. "Connecting to Database Using AngularJS." \em{Code Project}. N.p., 25 Mar. 2016. Web. 26 Nov. 2016.
-
-\end{thebibliography}
 %\section{Glossary}
 
 \section{Body}
@@ -464,7 +457,7 @@ It will do so using the following design:
 	\item \texttt{connection} will be closed.
 	\item Lastly, \texttt{result} will be echoed.
 \end{enumerate}
-
+ 
 
 
 \subsection{Report Generation}
@@ -473,19 +466,26 @@ It will do so using the following design:
 The type of user that will be generating reports will be a STEM Academy administrative user. The user will be able to generate reports using a user freindly interface that uses a search form for generating reports. Below the search form there will be a report form that contains the query results of the user. When a user has finished generating a report they will be able to save their report and also have the option to print their report. 
 
 \subsubsection{Search Form Interface View}
-The user interface for report generation will be a search form that uses text input boxes for querying information from the database. The fields that will be shown on the webpage include survey questions, responses, student info, club, program, and student demographic information. When the user arrives at the report generation page for the first time there will be one input text box for each field by default. Each input field will have its corresponding name written above incase the user deletes all of the input fields for the search form. This will allow the user to distinguish which add button corresponds to each field. The add button for each field will be located below the most recently created text input box. The add button will allow administrative users to add additional information for their query. Each input field will have a button on the right hand side for deleting the input field which will be indicated by "x" symbol and this will allow a user to delete any input fields that are no longer necessary for their query. 
-\\ \\
-Once an administrative user has finished inputting their query information into the input fields they will be able to submit their query by clicking on a submit button that will be located on the bottom right hand side of the search form. Below the search form there will an empty report form if the user decided to create a new report. If the user decided to edit a saved report the report form will display the query results of their saved report. Each query result shown in the report will have a text box above it, so that an administrative user is able to add a caption. If a user no longer needs a query in their report they will be able to delete a query in the report form by clicking on a delete button which will be indicated by "x" symbol. The delete button for each query will be located on the right side. When an administrative user has finished querying information for their report form they will be able to save their report by clicking on a save button that will be located at the bottom right hand side of the report form. Administrative users will be able to print out their generated reports or any saved reports by clicking on a print button that will be located on the top right hand side on the report form. 
+The user interface for generating a report will consists of drop down menus, radio buttons, and rectangular buttons. There will be two drop down menus displayed at the top of the report generation web page. The first drop down menu will display all of the camps that are stored in the database. When a user selects one of those camps and clicks a submit button that is located below the drop down menu it will cause the second drop down menu to display all of the surveys that belong to the selected camp. Next a user selects one of the survey names that is displayed and then they select the type of the survey which includes pre, post, or both by selecting one of the radio buttons. This will help with determining the type of the survey that is going to be queried.
+\\
+Next the user will select the type of query they want to use which will include a regular query and a change and response query. The regular query will consists of two drop down menus one for displaying the questions of the survey and the second for displaying the different responses for the survey question that was selected. It will also have a delete button which will be indicated by "-" symbol for removing the query template. The change in response query will consist of three drop down menus one for selecting a survey question and the other two drops down menus will be used to select the change in response for the selected question. Furthermore, it will have a delete button indicated by a "-" symbol. This query template is used for checking a change in a reponse for a question from a pre to a post survey. When the user clicks the "Add Query" button it will create a query template based on the type of query that they selected. 
+\\ 
+Once the user has their query setup they will select the type of result they want returned which includes a count and a percentage by clicking one of the radio buttons. When the user clicks the "Submit" button it will return the result of the query and display it in an empty report form if the user decided to create a new report. If the user decided to edit a saved report the report form will display the query results of their saved report and the new query result will be added to the form. Each query result shown in the report will have a text box above it, so that a user is able to add a caption. If a user no longer needs a query result in their report they will be able to delete the query result in the report form by clicking on a delete button which will be indicated by "-" symbol. The delete button for each query result will be located on the right hand side.
+\\
+When an administrative user has finished querying information for their report form they will be able to save their report by clicking on a save button. Administrative users will be able to print out their generated reports or any saved reports by clicking on a print button that will be located on the top right hand side on the report form. They will also be able to go back to the dashboard page by clicking an "Exit" button that will redirect them. In addition, there will be a "Reset" button that removes all of the query templates that are currently on the webpage, so that the user does not have to remove all them by clicking the delete button in each one. 
 
 \subsubsection{Search Form Logic Viewpoint}
 This viewpoint examines the logic for the tools that will be used to develope the report generation webpage. It also explains the tools that will be used for saving and printing a report.  
 
 \subsubsection{Search Form Logic View} 
-For creating the report generation form we will be using AngularJS, HTML, and PHP. The reason for using AngularJS is that it will enable us to create a dynamic search form which will allow the user to add additional input fields for their query. If we did not use AngularJS the form will be static and if an administrative user were to need more input fields for their query they would have to notify a developer to add the input fields manually to the HTML page which is inefficient. AngularJS requires an HTML for defining the application's user interface \cite{Lau}. The buttons for deleting and adding new input fields will have an ng-click AngularJS directive which will call their correspoding function for deleting and adding a new input field.  A controller will be used to modify the HTML expressions and the \$scope service will be used to detect any changes in the form\cite{Rav}.\\ 
 
-In order to save the report a table will be created in the database that only stores reports. By creating a table for storing reports it will permanently save them unless they are deleted from the database. PHP will be used for saving reports into the database and this will be done by using the INSERT INTO statement. For printing the report form CSS and Javascript will be used. CSS will be used to create two style sheets, so that when the print button is clicked it does not display the entire webpage as the content that is going to be printed. The first style sheet will be used to display the contents of the report generation webpage. The second style sheet will be used to exclude content on the webpage that is not related to the search form.\\
-
-For displaying the print dialogue box the line of code href="javascript:window.print()" will be added to the print button. The print dialogue box will allow adminstrative users to choose the orientation, number of copies to be printed, margins, page range, etc. When the submit button is clicked PHP will be used to query the information from the database using the SELECT statement. Any input text box fields left empty will be ignored when the submit button is clicked. The results of the query will be inserted into an empty form that will be located below the search form for making queries. The form will be created using the HTML $<$form$>$ tag. The $<$text area$>$ element that has the type text will be used for inserting the query information, title, and caption for a query into a report form. 
+For creating the report generation form we will be using HTML, JavaScript, and PHP. HTML and JavaScript will be used for DOM manipulation for changing the contents or adding things to the web page. For displaying the query templates for the change in response query and the regular query a div tag will be used in the HTML page to serve as the parent for appending newly created child query templates. The query templates will be created using a div tag as the base. Then the drop down menus and delete button will be added to the query template. The query template for each query type will be created by calling a JavaScript function that creates them when the "Add Query" button is clicked. The type of query template that is going to be created will be determined by the value of the radio button that was selected when the "Add Query" button is clicked.
+\\
+For displaying the names of all the camps in the first drop down menu PHP will be used to query the names of the camps from the database. For displaying names of the surveys in the second drop down menu PHP will be used to query the names of the surveys from the database by first checking if a camp was first selected and also if the "Submit" button was clicked. For deleting all of the templates that are currently on the page when the "Reset" button is clicked a JavaScript function will be created. It will get the parent div tag and in a while loop it will delete the last recently created query template child until they have all been deleted. For deleting a certain query template when its corresponding delete button is clicked a JavaScript function will be created that uses the IDs of the parent div tag and the selected child query template to delete it. 
+\\
+In order to save a report a table will be created in the database that only stores reports. By creating a table for storing reports it will permanently save them unless they are deleted from the database. PHP will be used for saving reports into the database by using a PHP INSERT statement. The report form will be saved as a JSON object and this will be done by using JavaScript. For printing the report form CSS and Javascript will be used. CSS will be used to create two style sheets, so that when the print button is clicked it does not display the entire webpage as the content that is going to be printed. The first style sheet will be used to display the contents of the report generation webpage. The second style sheet will be used to exclude content on the webpage that is not related to the search form.
+\\
+For displaying the print dialogue box the line of code href="javascript:window.print()" will be added to the print button. The print dialogue box will allow adminstrative users to choose the orientation, number of copies to be printed, margins, page range, etc. When the submit button is clicked PHP will be used to query the information from the database using the SELECT statement. The results of the query will be inserted into an empty form that will be located below the search form for making queries. The form will be created using the HTML $<$form$>$ tag. The $<$text area$>$ element that has the type text will be used for inserting the query information, title, and caption for a query into a report form. 
 
 \subsubsection{Report Form Logic Viewpoint}
 This viewpoint examines the logic for creating the saved report form that is displayed below the search form. 
