Added missing signature block

--- a/winter_mid_term_progress_report.tex
+++ b/winter_mid_term_progress_report.tex
@@ -223,4 +223,15 @@ Howver, looking forward and the work left to do on database interaction, the con
 Currently, the code for generating SQL queries is written, but it is basic and does not take requests from other pages for queries.
 The code will needed to be expanded, taking in JSON objects and parsing those objects to know what kind of query or queries are being requested (i.e. a \emph{SELECT} or \emph{INSERT} and what information to send in those queries.
 
+\newpage
+\section{Signatures}
+By signing below, I agree to the ideas and concepts presented in this document and the list of deliverables. \\
+\SignatureAndDate{Client Signature}
+\vspace{.2in}
+\SignatureAndDate{Team Member 1 Signature}
+\vspace{.2in}
+\SignatureAndDate{Team Member 2 Signature}
+\vspace{.2in}
+\SignatureAndDate{Team Member 3 Signature}
+
 \end{document}
