Added current status and things to do

--- a/spring_progress_report/report/spring_progress.tex
+++ b/spring_progress_report/report/spring_progress.tex
@@ -47,8 +47,45 @@
 \tableofcontents
 \newpage
 \section{Purposes and Goals}
+The STEM Academy program in Corvallis, Oregon, seeks to provide education in science, technology, engineering and math to the K-12 community through various programs, campus, and clubs.
+They are self funded, relying on grants, donations and other sources, many of which require results-based data on the success of STEM Academy programs.
+This data is collected from surveys that participants take while they are enrolled in one of STEM Academy's camps and other programs.
+Currently, these surveys are administered on paper and the responses are tabulated by hand by volunteers.
+This has not been an effective way of collecting current data to help secure funding and many of the surveys go untabulated.
+The STEM Academy does have the ability to register participants online through Ideal Logic, but this is this does not help them with tabulating survey data.
+They need a system which will allow them to electronically create surveys, a database to house all of the data from those surveys, and a report generation system so they can view the most current data in a timely and meaningful way.
+
+A website which will allow the STEM Academy to create and distribute surveys, as well as view helpful data results, is the best solution.
+The website should allow them to create questions that can be included across multiple surveys.
+The questions should be able to be templated so that only one part of the question need change according to the topic of the survey.
+Surveys should be able to be distributed via a web link or printed.
+After a survey is taken, the data should be stored in a database according to the type of program.
+This data should be queriable based on custom queries.
+The user should be able to make a query based on the question and collected demographics as well as filter by program.
+This service should be user friendly; the user should not need to know any SQL or other querying language in order to get data from the database.
+After a query, the data should be able to be saved and added to a printable report so that it can actually be used in grant proposals and marketing material.
+This website will be an all in one package for collecting and reporting on data in a timely fashion which is what the STEM Academy truly needs.
+By the Engineering Expo, we will be able to present this website and show the full path of data collection, from creating the survey to querying to report generation.
+
 \section{Current Status}
+The current status of our project is that we finished our web application and it functions properly. We are waiting on getting more feedback from our clients to see if they found any bugs that we need to fix and also any minor changes that they would like us to make. We finished our poster for expo on time and we will be receiving it during the week of expo. We are ready to present at expo and we are going to be running a video in the background that demonstrates the functionality of our web application. 
+
 \section{Left To Do}
+The things that remain to do are to meet up with our clients to transfer the project, documentation, and to give them training on how to use the web application. We have already sent them an email and we are currently waiting on a response on what day and time in early June works for them. While we wait to meet up with our clients we will be updating all of our documentation, so that it reflects the changes that we made. We still need to record a video of how our web application works to run in the background in one of our computer's for expo and we are planning on doing this early this up coming week. This will be an easy task to accomplish and it should not take a long time to do.
+
+\section{Retrospective}
+\begin{center}
+    \begin{tabular}{ | p{5cm} | p{5cm} | p{5cm} |}
+    \hline
+     Positive & Delta & Action \\ \hline
+     We all attended the TA meetings and we were also on time. & When our client sends us a message we need to respond more quickly. & If the person who is the main point of contact is not able to respond to the client the other group members should respond in order to provide them with a timely response. \\ \hline
+
+     
+
+     
+    \end{tabular}
+\end{center}
+
 \section{Term Break Down}
 \subsection{Week 1}
 This week we met with our client. We implemented the survey taking portion which included: 
@@ -186,6 +223,8 @@ This week not much occurred. The code freeze was met perfectly fine. We got some
  meet their needs and also to fix any bugs that they find.
 \subsection{Week 6}
 \newpage
+\section{Images of Project}
+
 %\bibliographystyle{ieeetr}
 %\bibliography{writing1}
 \end{document}
